--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <h1>Your profile details</h1>
-    {{user|json}}
+    <!-- {{user|json}} -->
     <mat-card-content>
         <div class="bootstrap-wrapper">
             <div class="container">
